@@ -79,6 +79,6 @@ void define_constants(PyObject *module)
    both_edge = Py_BuildValue("i", BOTH_EDGE + PY_EVENT_CONST_OFFSET);
    PyModule_AddObject(module, "BOTH", both_edge);
 
-   version = Py_BuildValue("s", "0.5.10a2");
+   version = Py_BuildValue("s", "0.5.10a3");
    PyModule_AddObject(module, "VERSION", version);
 }
